Add EYAVAP Dashboard and Traffic Simulation
- Created a new Streamlit dashboard for real-time monitoring of AI agent activities, including metrics and data visualization.
- Implemented a traffic simulation script to send random agent messages to the API, simulating both good and bad agents.
- Updated requirements.txt to include necessary packages for dashboard and data manipulation.
- Enhanced main.py with OpenAI integration and improved timestamp handling.
- Added security filters in message validation to detect dangerous content and low security scores.

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,10 @@ pytest-asyncio                # Enables testing for asynchronous FastAPI endpoin
 loguru                        # Advanced, easy-to-use logging for system events
 prometheus-client             # Exports system metrics for real-time performance monitoring
 
+# --- Dashboard & Visualization ---
+streamlit                     # Interactive web dashboard for monitoring AI agents
+pandas                        # Data manipulation and analysis for log processing
+
 # --- Utilities ---
 python-dateutil               # Powerful extensions to the standard datetime module
 pyyaml                        # Support for reading/writing YAML configuration files
