--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ multidict==6.7.1
 narwhals==2.16.0
 numpy==2.4.2
 openai==2.16.0
+google-generativeai
 packaging==26.0
 pandas==2.3.3
 pillow==12.1.0
