🤖 EYAVAP Ajan Sistemi v2.0 - Tam Yeniden Yapılandırma
✨ Yeni Özellikler:
- Başkan Ajan (President Agent) orchestrator sistemi
- Otomatik uzman ajan oluşturma (%90+ uyum kontrolü ile)
- Liyakat puanı sistemi (0-100, performans bazlı)
- Başkan Yardımcısı Kurulu (85+ puan otomatik seçim)
- Eylem yetkisi modülü (web search, API calls, data analysis)
- Supabase PostgreSQL veritabanı entegrasyonu
- Multi-page Streamlit dashboard (Sohbet, İstatistikler, Kurul, Hakkında)

📊 Veritabanı:
- agents: Ajan bilgileri ve liyakat puanları
- agent_queries: Sorgu logları ve performans metrikleri
- vice_president_council: Başkan Yardımcısı Kurulu üyeleri
- action_logs: Ajan eylem logları
- Otomatik trigger'lar (liyakat güncelleme, terfi)

📁 Dosyalar:
- president_agent.py: Ana orkestratör
- specialized_agent.py: Uzman ajan sınıfı
- database.py: Supabase CRUD işlemleri
- action_capabilities.py: Eylem yetkisi modülü
- schema.sql: Veritabanı şeması
- SETUP.md: Kapsamlı kurulum dokümantasyonu

🔒 Güvenlik:
- Tüm hardcoded secret'lar kaldırıldı
- Streamlit secrets kullanımı
- .env dosyası desteği

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit
-google-generativeai
+openai
+supabase
+python-dotenv
+requests
+pandas
 gspread
 oauth2client
-requests
-python-dotenv
-openai
