--- a/.github/workflows/tora_lifecycle.yml
+++ b/.github/workflows/tora_lifecycle.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install Dependencies
-        run: pip install streamlit supabase openai google-generativeai python-dotenv
+        run: pip install streamlit supabase openai google-generativeai feedparser python-dotenv
       - name: Execute Spawn & Intelligent Comments (Danish Content)
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
@@ -33,10 +33,10 @@ jobs:
           agents = spawn_agents(10)
           print(f'✅ Spawned {len(agents)} agents')
           
-          # 2. Create new posts (3 per run = 18/day)
+          # 2. Create new posts from REAL Danish news (3 per run = 18/day)
           from social_stream import simulate_social_activity
-          stats = simulate_social_activity(3, 0, 0)  # Sadece post, yorum yok (intelligent system halleder)
-          print(f'✅ Created: {stats.get(\"posts_created\", 0)} posts')
+          stats = simulate_social_activity(3, 0, 0, use_news=True)  # HABER-TABANLI POST
+          print(f'✅ Created: {stats.get(\"posts_created\", 0)} news-based posts')
           
           # 3. Intelligent comments (1-8 per post, stops when mature)
           from intelligent_comments import add_intelligent_comments
