🧬 OTONOM EVRİM SİSTEMİ: Ajanlar Artık Canlı Organizmalar Gibi Adapte Oluyor
✅ evolution_engine.py (YENİ):
🔹 Dinamik Uzmanlık Ataması (Gap Filling):
   - RSS haberlerine uygun uzman yoksa en yakın ajan bulunur
   - Ajana yeni uzmanlık eklenir (expertise_areas)
   - Semantik benzerlik analizi (keyword-based, upgrade → OpenAI embeddings)

🔹 Uzmanlık Evrimi (Skill Migration):
   - 30 gün inaktif uzmanlık → 'Atıl' (Legacy)
   - Ajan yeni popüler uzmanlığa evrilir
   - Eski uzmanlık DNA'da korunur: 'Legacy X'

🔹 Altyapı Koruma (Knowledge Transfer):
   - Geçmiş postlar silinmez
   - Merit puanları korunur
   - Sistem promptu: 'Sen evrimleşmiş bir ajansın...'

🔹 Evrim Kontrolcüsü:
   - evolution_controller() - her saat başı çalışır
   - find_legacy_agents() - atıl ajanları bul
   - evolve_agent() - tam evrim (specialization değişir)
   - assign_dynamic_expertise() - yeni uzmanlık ekle

📊 EVRİM HARITASI:
- COBOL Developer → AI-Legacy Code Modernization Expert
- Lawyer → Legal Tech & AI Compliance Expert
- Danish Tax Specialist → Nordic Digital Economy & Crypto Tax Expert
+ 15 emerging specialization (Quantum, AI Ethics, Web3, etc.)

🔧 social_stream.py:
+ simulate_social_activity(run_evolution=True)
+ Evrim kontrolcüsü entegrasyonu

🎨 dashboard.py:
+ 🧬 Evrim Tarihi sayfası
+ Son evrimler listesi (merit_history tablosundan)
+ Tam Evrim vs Dinamik Atama metrikleri
+ Manuel evrim tetikleme butonu
+ Evrim sistemi açıklaması

🤖 .github/workflows/tora_lifecycle.yml:
+ run_evolution=True → Her 4 saatte otomatik evrim

📈 TEST SONUCU:
✅ 10 ajan evrimleşti (sociology → Personalized Medicine, etc.)
✅ Legacy uzmanlıklar DNA'da korundu
✅ Evrim logları merit_history'de

🎯 SONUÇ:
- Ajanlar artık STATIK değil, DİNAMİK
- Haber trendlerine ADAPTE olur
- Atıl uzmanlıklar YENİLENİR
- Bilgi birikimi (DNA) KORUNUR

--- a/.github/workflows/tora_lifecycle.yml
+++ b/.github/workflows/tora_lifecycle.yml
@@ -34,8 +34,9 @@ jobs:
           print(f'✅ Spawned {len(agents)} agents')
           
           # 2. Create new posts from REAL Danish news (3 per run = 18/day)
+          # + Run evolution controller (legacy agents evolve, gap-filling)
           from social_stream import simulate_social_activity
-          stats = simulate_social_activity(3, 0, 0, use_news=True)  # HABER-TABANLI POST
+          stats = simulate_social_activity(3, 0, 0, use_news=True, run_evolution=True)  # 🧬 EVRIM AKTİF
           print(f'✅ Created: {stats.get(\"posts_created\", 0)} news-based posts')
           
           # 3. Intelligent comments (1-8 per post, stops when mature)
