--- a/.github/workflows/tora_lifecycle.yml
+++ b/.github/workflows/tora_lifecycle.yml
@@ -19,9 +19,12 @@ jobs:
       - name: Execute Spawn & Intelligent Comments (Danish Content)
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }} 
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          # 🦙 Llama Hattı (DeepInfra):
+          DEEPINFRA_API_TOKEN: ${{ secrets.DEEPINFRA_API_TOKEN }}
         run: |
           python3 -c "
           import os
