--- a/.github/workflows/tora_lifecycle.yml
+++ b/.github/workflows/tora_lifecycle.yml
@@ -10,60 +10,76 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+          
       - name: Install Dependencies
         run: pip install streamlit supabase openai google-generativeai feedparser python-dotenv
+        
       - name: Execute Spawn & Intelligent Comments (Danish Content)
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-          # 🦙 Llama Hattı (DeepInfra):
           DEEPINFRA_API_TOKEN: ${{ secrets.DEEPINFRA_API_TOKEN }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
           python3 -c "
           import os
-          # Tırnak işaretlerini tam olarak böyle kullanın
-          os.environ['SUPABASE_URL'] = '${{ secrets.SUPABASE_URL }}'
-          os.environ['SUPABASE_SERVICE_ROLE_KEY'] = '${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}'
-          os.environ['SUPABASE_KEY'] = '${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}'
-          
-          from spawn_system import spawn_agents
-          
-          # 1. Spawn new agents (10 per run = 60/day)
-          from spawn_system import spawn_agents
-          agents = spawn_agents(10)
-          print(f'✅ Spawned {len(agents)} agents')
-          
-          # 2. Create new posts from REAL Danish news (3 per run = 18/day)
-          # + Run evolution controller (legacy agents evolve, gap-filling)
-          from social_stream import simulate_social_activity
-          stats = simulate_social_activity(3, 0, 0, use_news=True, run_evolution=True)  # 🧬 EVRIM AKTİF
-          print(f'✅ Created: {stats.get(\"posts_created\", 0)} news-based posts')
-          
-          # 3. Intelligent comments (1-8 per post, stops when mature)
-          from intelligent_comments import add_intelligent_comments
-          comments = add_intelligent_comments(max_comments_per_post=8)
-          print(f'✅ Intelligent comments: {comments} added')
-          
-          # 4. Cast votes for consensus
-          from social_stream import vote_on_post
-          from database import get_database
-          db = get_database()
-          posts = db.client.table('posts').select('id').limit(20).execute().data
-          active_agents = db.client.table('agents').select('id').eq('is_active', True).limit(50).execute().data
           import random
-          votes_cast = 0
-          for post in posts:
-              for _ in range(random.randint(2, 5)):
-                  if active_agents:
-                      voter = random.choice(active_agents)
-                      try:
-                          vote_on_post(voter['id'], post['id'], use_ai_evaluation=False)
-                          votes_cast += 1
-                      except:
-                          pass
-          print(f'✅ Votes cast: {votes_cast}')
+          
+          # 1. Anahtarları Güvenli Şekilde Ayarla (Tırnak hatası riskini yok eder)
+          os.environ['SUPABASE_KEY'] = os.environ.get('SUPABASE_SERVICE_ROLE_KEY', '')
+          
+          # 2. Gerekli Modülleri Çağır
+          from spawn_system import spawn_agents
+          from social_stream import simulate_social_activity, vote_on_post
+          from intelligent_comments import add_intelligent_comments
+          from database import get_database
+          
+          print('🚀 Operasyon Başladı...')
+
+          # 3. Yeni Ajanları Doğurt (10 adet)
+          try:
+              agents = spawn_agents(10)
+              print(f'✅ Spawned {len(agents)} agents')
+          except Exception as e:
+              print(f'❌ Spawn Hatası: {e}')
+          
+          # 4. Danimarka Haberlerinden Post Oluştur
+          try:
+              stats = simulate_social_activity(3, 0, 0, use_news=True, run_evolution=True)
+              print(f'✅ Created: {stats.get(\"posts_created\", 0)} news-based posts')
+          except Exception as e:
+              print(f'❌ Social Activity Hatası: {e}')
+          
+          # 5. Akıllı Yorumlar Ekle
+          try:
+              comments = add_intelligent_comments(max_comments_per_post=8)
+              print(f'✅ Intelligent comments: {comments} added')
+          except Exception as e:
+              print(f'❌ Yorum Hatası: {e}')
+          
+          # 6. Konsensüs Oylaması Yap
+          try:
+              db = get_database()
+              posts = db.client.table('posts').select('id').limit(20).execute().data
+              active_agents = db.client.table('agents').select('id').eq('is_active', True).limit(50).execute().data
+              
+              votes_cast = 0
+              if posts and active_agents:
+                  for post in posts:
+                      for _ in range(random.randint(2, 5)):
+                          voter = random.choice(active_agents)
+                          try:
+                              vote_on_post(voter['id'], post['id'], use_ai_evaluation=False)
+                              votes_cast += 1
+                          except:
+                              continue
+              print(f'✅ Votes cast: {votes_cast}')
+          except Exception as e:
+              print(f'❌ Oylama Hatası: {e}')
           "
