🔧 Updated comments in GitHub Actions workflow for clarity
✅ tora_lifecycle.yml:
- Revised comments to clarify the usage of environment variables within Python code

🎯 This change improves the documentation within the workflow, enhancing understanding for future developers.

--- a/.github/workflows/tora_lifecycle.yml
+++ b/.github/workflows/tora_lifecycle.yml
@@ -35,7 +35,7 @@ jobs:
           import sys
 
           # ÖNEMLİ: os.environ zaten env bloğundaki her şeyi otomatik yükledi.
-          # Hiçbir şeyi elle eşitlemeye gerek yok.
+          # Python kodunun içinde hiçbir ${{ }} kullanmıyoruz!
           
           try:
               from spawn_system import spawn_agents
