--- a/.github/workflows/tora_lifecycle.yml
+++ b/.github/workflows/tora_lifecycle.yml
@@ -1,3 +1,34 @@
+name: Tora Legion Lifecycle
+
+on:
+  workflow_dispatch:
+  schedule:
+    - cron: "0 */4 * * *" # Her 4 saatte bir
+
+jobs:
+  tora-activity:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install \
+            streamlit \
+            supabase \
+            openai \
+            google-generativeai \
+            feedparser \
+            python-dotenv
+
       - name: Execute Spawn & Intelligent Comments (Danish Content)
         env:
           SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
@@ -32,7 +63,13 @@
 
           # 2. News & Social
           try:
-              stats = simulate_social_activity(3, 0, 0, use_news=True, run_evolution=True)
+              simulate_social_activity(
+                  max_posts=3,
+                  min_posts=0,
+                  max_comments=0,
+                  use_news=True,
+                  run_evolution=True
+              )
               print("✅ Created posts")
           except Exception as e:
               print(f"❌ Social Hatası: {e}")
@@ -47,15 +84,39 @@
           # 4. Voting
           try:
               db = get_database()
-              posts_query = db.client.table("posts").select("id").limit(20).execute()
-              agents_query = db.client.table("agents").select("id").eq("is_active", True).limit(50).execute()
+
+              posts_query = (
+                  db.client
+                  .table("posts")
+                  .select("id")
+                  .limit(20)
+                  .execute()
+              )
+
+              agents_query = (
+                  db.client
+                  .table("agents")
+                  .select("id")
+                  .eq("is_active", True)
+                  .limit(50)
+                  .execute()
+              )
 
               if posts_query.data and agents_query.data:
                   for post in posts_query.data:
                       for _ in range(random.randint(2, 5)):
                           voter = random.choice(agents_query.data)
-                          vote_on_post(voter["id"], post["id"], use_ai_evaluation=False)
+                          vote_on_post(
+                              voter["id"],
+                              post["id"],
+                              use_ai_evaluation=False
+                          )
                   print("✅ Oylama tamamlandı")
+              else:
+                  print("⚠️ Oylama için yeterli veri yok")
+
           except Exception as e:
               print(f"❌ Oylama Hatası: {e}")
+
+          print("🏁 Operasyon başarıyla tamamlandı")
           PY
